<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/container_grauA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/grauaTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewGrauA"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/grauaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintGrauA"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_grauB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_grauA"

        android:orientation="vertical">

        <TextView
            android:id="@+id/graubTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewGrauC"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/graubEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintGrauB"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_grauC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_grauB"

        android:orientation="vertical">

        <TextView
            android:id="@+id/graucTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewGrauC"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/graucEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintGrauC"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_grauC"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/calcular_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/calcularButton" />

        <Button
            android:id="@+id/limpar_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limparButton" />


    </LinearLayout>

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_container"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:text="@string/resultValue" />


</RelativeLayout>